fix Collapse 折叠面板组件

--- a/src/collapse/style/index.scss
+++ b/src/collapse/style/index.scss
@@ -3,11 +3,8 @@
 
 .Yep-collapse {
   &-arrow{
-    background: url("//m.360buyimg.com/imagetools/jfs/t1/14185/35/3286/352/5c26d971E661dbae4/2874090274cfa1ad.png") no-repeat;
-    display: inline-block;
     width: 30px;
     height: 30px;
-    background-size: auto 100%;
     margin-left: auto;
     transition: all .3s ease;
   }
